[EME][GStreamer] Fix wrong ifdef https://bugs.webkit.org/show_bug.cgi?id=181289

Reviewed by Alex Christensen.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage): Remove the
ENCRYPTED_MEDIA ifdef from the VIDEO_TRACK ifdef block. Both have
nothing to do together.

Canonical link: https://commits.webkit.org/197163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226446 268f45cc-cd09-0410-ab3c-d52691b4dbfc